# task-tracking-web-app

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: TaskForm.tsx  TaskList.tsx
app/lib/: api.ts
server/: Dockerfile  pyproject.toml
server/alembic/: env.py
server/src/: db.py  main.py  models.py  schemas.py  seeds.py
server/src/routers/: tasks.py
server/tests/: test_tasks.py
