[project]
name = "todo-fastapi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.*",
  "uvicorn[standard]==0.30.*",
  "sqlalchemy==2.0.*",
  "pydantic==2.*",
  "alembic==1.13.*",
  "psycopg[binary,pool]==3.*"
]

# 👇 nuevo
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "httpx>=0.28"
]
